--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <div class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div class="navigation">
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,11 +22,11 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
-    <div class="hero" alt="Four people around a table looking over papers"></div>
-    <div class="content">
-        <div id="search-engine-optimization" class="content-child">
+        </nav>
+    </header>
+    <section class="hero" alt="Four people around a table looking over papers"></section>
+    <main>
+        <section id="search-engine-optimization" class="content">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Wood table with a laptop, magnifying glass, cup of coffee, spiral notebook, and colored pencils" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -34,8 +34,8 @@
                 travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
                 your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="content-child">
+        </section>
+        <section id="online-reputation-management" class="content">
             <img src="./assets/images/online-reputation-management.jpg" alt="person sitting at a wood table, holding a phone, and looking at graphs on a laptop" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -43,8 +43,8 @@
                 internet connection to say whatever they want about your business. Online Reputation Management gives
                 you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="content-child">
+        </section>
+        <section id="social-media-marketing" class="content">
             <img src="./assets/images/social-media-marketing.jpg" alt="six people sitting around a wood table covered in signs displaying social media icons" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -52,40 +52,40 @@
                 determine which platforms are suited to your brand, using analytics to find the right markets and
                 increase your lead generation.
             </p>
-        </div>
-    </div>
-    <div class="benefit">
-        <div class="benefit-child">
+        </section>
+    </main>
+    <article>
+        <section class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="icon depicting a gear being filtered into a dollar sign" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
             </p>
-        </div>
-        <div class="benefit-child">
+        </section>
+        <section class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="icon depicting a lightbult wearing a tie" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
             </p>
-        </div>
-        <div class="benefit-child">
+        </section>
+        <section class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="icon depicting a gear behind 3 dollar signs"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
             </p>
-        </div>
-    </div>
-    <div class="footer">
+        </section>
+    </article>
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
